fix content margin when close header to avoid jumping

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -127,7 +127,6 @@ a:hover {
   text-align: center;
   border-bottom: 1px solid var(--border-light);
   transition: all 0.3s ease;
-  overflow: hidden;
 }
 
 .logo {
